# local_llama

./: .gitignore  LICENSE  README.md  app.py  check_gpu.py  local_model_cpu.py  local_model_gpu.py  pyproject.toml  ubuntu_python_setup.sh  ubuntu_setup.sh
